# MrRoboto

./: .gitmodules  .rosinstall  .rosinstall.bak  CMakeLists.txt  package.xml
gbot_core/launch/: gbot.launch
launch/: bring_slam.launch  camera.launch  hector_mapping_default.launch  rtabmap.launch  wiimote_control.launch
mr_roboto/: CMakeLists.txt
mr_roboto/arduino/pressure_sensor/: pressure_sensor.ino
mr_roboto/configuration_files/: cartographer_conf.lua
mr_roboto/launch/: bring_slam.launch  bringup.launch  camera.launch  camera_rgb.launch  cartographer.launch  depth_camera.launch  everything.launch  gmapping.launch  hector.launch  hector_mapping_default.launch  rplidar.launch  rviz_hector.launch  tactile_sensor.launch  wiimote_control.launch
mr_roboto/rviz/: rviz_cartographer.launch  rviz_gmapping.launch  rviz_rtabmap.launch
mr_roboto/scripts/: acc.csv  adc.csv  collide_with_object.py  myTestCode.py  plots.py  record_imu.py  record_sensor.py
riki_msgs/: CMakeLists.txt
riki_msgs/msg/: Speed_compensation.msg
xrrobot/: CMakeLists.txt
xrrobot/include/riki_msgs/: Battery.h  DHT22.h  Imu.h  Infrared.h  PID.h  Servo.h  Speed_compensation.h  Ultrasonic.h  Velocities.h
xrrobot/launch/: bring_navigate.launch  bring_slam.launch  bringup.launch  camera.launch  sc_bring.launch
xrrobot/launch/include/imu/: imu.launch
xrrobot/launch/lidar/: lidar_laser.launch  xr_mini.launch
xrrobot/maps/: house.pgm
xrrobot/param/imu/: imu_calib.yaml
xrrobot/param/navigation/: move_base.xml  slam_gmapping.xml
xrrobot/script/: SC_node.py  robot_status_interaction.py
(+7 files in other folders)
