<?xml version="1.0"?>
<package format="2">
  <name>my_package</name>
  <version>0.0.0</version>
  <description>The my_package package</description>

  <maintainer email="willem.vanderelst@icloud.com">willem</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>realsense2_camera</build_depend>
  <build_depend>xrrobot</build_depend>
  <build_export_depend>realsense2_camera</build_export_depend>
  <build_export_depend>xrrobot</build_export_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>xrrobot</exec_depend>

</package>
